# nestor

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml  example.config.toml
azure-pipelines/: azure-pipelines-template.yml  fix_coverage_for_cobertura.py
irc-bot/: Cargo.toml
irc-bot-codegen/: Cargo.toml
irc-bot-codegen/src/: lib.rs
irc-bot-types/: Cargo.toml
irc-bot/src/: handler.rs  lib.rs  request.rs
migrations/2019-01-05-060044_create_factoids/: up.sql
migrations/2019-01-11-064055_create_qotd/: down.sql
migrations/2019-01-12-030207_create_winerrors/: down.sql  up.sql
nestor/: Cargo.toml
nestor-codegen/: Cargo.toml
nestor-codegen/src/: lib.rs
nestor/src/: config.rs  handler.rs  lib.rs  request.rs  response.rs
nestor/tests/: end_to_end.rs
rustbot/: Cargo.toml  example.config.toml  nestor.toml
rustbot/src/: config.rs  database.rs  main.rs
rustbot/src/commands/: crate_info.rs  default.rs  forget.rs  github.rs  learn.rs  lock.rs  qotd.rs  rustc_error.rs  windows_error.rs
rustbot/src/database/: models.rs
rustybot/: Cargo.toml  README.md  example.config.toml
rustybot/migrations/2019-01-05-060044_create_factoids/: down.sql
rustybot/migrations/2019-01-11-064055_create_qotd/: up.sql
rustybot/src/: commands.rs  config.rs  database.rs  main.rs
rustybot/src/commands/: crate_info.rs  default.rs  factoid_metadata.rs  forget.rs  github.rs  learn.rs  lock.rs  qotd.rs  rustc_error.rs  windows_error.rs
rustybot/src/database/: models.rs  schema.rs
src/: commands.rs  config.rs  database.rs  handler.rs  main.rs  models.rs  schema.rs
src/commands/: crate_info.rs  default.rs  forget.rs  github.rs  learn.rs  lock.rs  qotd.rs  rustc_error.rs  windows_error.rs
src/database/: import_models.rs  models.rs  rustbot_model.rs  schema.rs
