[package]
name = "rustbot"
version = "0.1.0"
authors = ["Daniel Griffen <daniel@griffen.io>"]
edition = "2018"

[dependencies]
irc = "0.13"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0", features = ["sqlite", "chrono"] }
failure = "0.1"
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"