[package]
name = "irc-bot"
version = "0.1.0"
authors = ["Daniel Griffen <daniel@griffen.io>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1.25"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
irc = "0.13"
state = "0.4"
tokio = { version = "0.1.13", features = ["async-await-preview"] }
tokio-async-await = "0.1.4"