[lib]
proc-macro = true

[package]
name = "nestor_codegen"
version = "0.2.0"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
description = """
procedural macros for nestor irc bot framework
"""
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"