[package]
name = "nestor"
version = "0.2.0"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
description = """
irc bot framework for nightly
"""
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
irc = { git = "https://github.com/aatxe/irc/", branch = "develop" }
state = { version = "0.4", features = ["tls"] }
tokio = "0.2"
futures = "0.3"
nestor_codegen = { version = "0.2.0", path = "../nestor-codegen" }
inventory = "0.1"