[package]
name = "rustybot"
version = "0.0.1"
authors = ["Daniel Griffen <daniel@griffen.io>"]
edition = "2018"

[dependencies]
futures = "0.1.25"
irc = "0.13"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0", features = ["sqlite", "chrono", "r2d2"] }
failure = "0.1"
toml = "0.4"
tokio = { version = "0.1.13", features = ["async-await-preview"] }
tokio-async-await = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.2"
reqwest = "0.9"
rand = "0.6"
nestor = { version = "0.1.0", path = "../nestor" }
libsqlite3-sys = { version = "0.9", features = ["bundled"] }