[package]
name = "rustybot"
version = "0.0.1"
authors = ["Zoey Riordan <zoey@dos.cafe>"]
edition = "2018"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.0", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = "1.0"
futures = "0.3"
nestor = { version = "0.2.0", path = "../nestor" }
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "0.2" }
toml = "0.5"
libsqlite3-sys = { version = "0.16", features = ["bundled"] }